# CartPole

cp/: CMakeLists.txt  CartPoleSim.cpp  CartPoleSim.h  CartPoleWidget.cpp  CartPoleWidget.h  main.cpp  main2.cpp
cpNN/: Agent.cpp  Agent.h  CMakeLists.txt  SimpleNN.cpp  SimpleNN.h  Widget.cpp  Widget.h  main.cpp
cpNN2/: Agent.cpp  Agent.h  SimpleNN.cpp  SimpleNN.h  Widget.cpp  Widget.h  main.cpp
